--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,79 @@
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.header {
+  background-image: linear-gradient(
+    135deg,
+    #0061f2 0%,
+    rgba(105, 0, 199, 0.8) 100%
+  ) !important;
+
+  min-height: 50vh !important;
+}
+
+.hero__desc {
+  color: rgb(199, 199, 199);
+}
+
+.card__price::before {
+  content: "$";
+  vertical-align: 33%;
+  padding-right: 1rem;
+  font-size: 1.4rem !important;
+}
+
+.card__price::after {
+  content: "/mo";
+  vertical-align: 0%;
+  padding-left: 0.4rem;
+  font-size: 1rem !important;
+}
+
+.card__desc {
+  text-align: center;
+}
+
+.link:hover {
+  text-decoration: underline !important;
+}
+
+.dropdown-menu {
+  left: -100% !important;
+  top: calc(100% + 1rem) !important;
+}
+
+.dropdown-menu.drop-pages {
+  left: -700% !important;
+  /* height: 25rem !important; */
+  /* min-width: 40rem !important; */
+}
+
+.dropdown-menu.drop-landings {
+  left: -600% !important;
+}
+
+.landings__bg {
+  height: 100%;
+
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 200, 0.6),
+      rgba(0, 0, 200, 0.6)
+    ),
+    url("https://sb-ui-kit-pro.startbootstrap.com/assets/img/backgrounds/bg-dropdown-xl.jpg");
+  background-position: 50% 50%;
+  background-size: cover;
+}
+
+.landings__bg--text {
+  text-align: center;
+}
+
 footer {
   padding-top: 4rem;
   background-color: #212832;
