--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ hr {
   vertical-align: middle;
   cursor: pointer;
   border: 1px solid transparent;
-  padding: 0.875rem 1.125rem;
+  padding: 1.2rem 1.6rem;
   font-size: 0.875rem;
   border-radius: 0.35rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -59,10 +59,91 @@ hr {
   box-shadow: 0 0.15rem 1.75rem 0 rgba(33, 40, 50, 0.15) ;
 }
 
+/*cards*/
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(33, 40, 50, 0.125);
+  border-radius: 0.35rem;
+  margin-top: 3rem;
+  box-shadow: 0 0.15rem 1.75rem 0 rgb(33 40 50 / 15%);
+  cursor:default;
+  transition: all 400ms ease;
+}
+.card:hover{
+  box-shadow: 5px, 5px 20px rgba(0,0,0,0.4);
+  transform: translateY(-3%);
+}
+
+.text-primary {
+  color: rgba(0,97,242) ;
+}
+.color-bg{
+  color: rgba(105, 0, 199, 1)
+}
+h5{
+  font-size: 1.7rem;
+}
+p{
+  display: block;
+  margin-block-end: 1em;
+  font-size: 1.5rem;
+}
+.card.lift {
+  text-decoration: none;
+  color: inherit;
+}
 
 
 
 
+
+.feather {
+  height: 1rem;
+  width: 1rem;
+  vertical-align: top;
+}
+
+.feather-sm {
+  height: 0.8rem;
+  width: 0.8rem;
+}
+
+.icon-stack {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100%;
+  height: 2.5rem;
+  width: 2.5rem;
+  font-size: 1rem;
+  background-color: #f2f6fc;
+  flex-shrink: 0;
+}
+.icon-stack svg {
+  height: 1rem;
+  width: 1rem;
+}
+.icon-stack-xl {
+  height: 5rem;
+  width: 5rem;
+  font-size: 1.75rem;
+}
+.icon-stack-xl svg {
+  height: 1.75rem;
+  width: 1.75rem;
+}
+
+
+
+
+
+/*footer*/
 
 footer {
   padding-top: 4rem;
