--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@
 }
 .pricing-price {
   padding-left: 30px;
-  font-size: 0.9rem;
+  font-size: 3rem;
   color: #363d47;
   margin-bottom: 1rem;
 }
@@ -65,6 +65,10 @@ li span i {
 .card-text {
   color: #69707a;
 }
+.text-gray-200 {
+  color: #e0e5ec;
+}
+
 /* Footer */
 footer {
   padding-top: 4rem;
