--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,8 @@
   -moz-box-shadow: -2px -1px 23px 0px rgba(176, 156, 156, 0.51);
   border-radius: 0.35rem;
 }
+/* Different pricings plans */
+
 .card-customized {
   position: relative;
   display: flex;
